--- a/fineroof/app/template/sass/layout/_galery-block.scss
+++ b/fineroof/app/template/sass/layout/_galery-block.scss
@@ -66,6 +66,9 @@
 		justify-content: center;
 
 		object-fit: cover;
+		& img {
+			height: 100%;
+		}
 		&::before {
 			content: '';
 			width: 100%;
@@ -94,6 +97,7 @@
 		font-weight: 700;
 		text-transform: uppercase;
 		letter-spacing: 1.4px;
+		text-align: center;
 
 		pointer-events: none;
 		transition: .3s;
