--- a/fineroof/app/template/sass/layout/_gallery.scss
+++ b/fineroof/app/template/sass/layout/_gallery.scss
@@ -1,14 +1,21 @@
 .gallery {
 	padding: 58px 0px 73px;
 	&__wrap {
-		max-width: 960px;
+		max-width: 844px;
+
 		width: 100%;
 		display: -webkit-flex;
 		display: -ms-flex;
 		display: flex;
-		align-items: center;
 		justify-content: space-between;
 		margin: 0 auto;
+		@include adaptive (1075) {
+			flex-direction: column;
+			align-items: center;
+		}
+	}
+	&__subtitle.custom-subtitle {
+		margin-bottom: 58px;
 	}
 	&__left {
 		display: -webkit-flex;
@@ -20,6 +27,8 @@
 		pointer-events: none;
 	}
 	&__text {
+		line-height: 18px;
+		margin-top: 0;
 		padding-left: 48px;
 
 		pointer-events: none;
@@ -30,29 +39,34 @@
 	}
 	&__right {
 		pointer-events: none;
+
+		margin-right: -90px;
 		& object {
 			width: 418px;
 			height: 365px;
 
 			pointer-events: inherit;
+			@include adaptive (479) {
+				width: 100%;
+				height: 263px;
+			}
 		}
 		flex-shrink: 0;
 		margin-left: 57px;
-		@include adaptive (775) {
-			flex-shrink: 1;
-			margin-left: 20px;
-		}
-		@include adaptive (610) {
-			display: none;
+		@include adaptive (1075) {
+			margin-left: auto;
+			margin-right: auto;
+
+			margin-top: 21px;
 		}
 	}
 	&__link {
 		margin-top: 38px;
 		margin-left: 48px;
 		pointer-events: all;
-		@include adaptive (775) {
-			margin-top: 20px;
-			margin-left: 0;
+		@include adaptive (1075) {
+			margin-left: auto;
+			margin-right: auto;
 		}
 	}
 }
