--- a/fineroof/app/template/sass/layout/_header.scss
+++ b/fineroof/app/template/sass/layout/_header.scss
@@ -19,7 +19,7 @@
 
 		@include adaptive (610) {
 			z-index: auto;
-	    padding: 9px 0px 6px;
+	   	 	padding: 16px 0px 18px;
 		}
 
 
@@ -90,6 +90,9 @@
 			width: 50px;
 			height: 48px;
 		}
+		@include phone {
+			display: none;
+		}
 	}
 	&__image {
 
@@ -97,6 +100,11 @@
 		& object {
 			width: 219px;
 			height: 99px;
+			@include phone {
+				width: 156px;
+				height: 71px;
+				margin-bottom: 33px;
+			}
 		}
 	}
 	&__center {
@@ -149,8 +157,11 @@
 		align-items: center;
 
 		margin-left: 74px;
-		@include adaptive (610) {
-			display: none;
+		@include adaptive (1075) {
+			margin-left: 30px;
+		}
+		@include phone {
+			margin-left: 0;
 		}
 	}
 	&__right {
@@ -158,29 +169,6 @@
 		display: -ms-flex;
 		display: flex;
 		flex-direction: column;
-	}
-	&__bottom {
-		@include adaptive (610) {
-			width: 400px;
-			height: 100%;
-			max-width: 100vw;
-			max-height: 100vh;
-			position: fixed;
-			top: 0;
-			right: -400px;
-			background: white;
-			overflow: auto;
-			-webkit-overflow-scrolling: touch;
-			z-index: 11;
-			transition: .5s;
-			&.isActive {
-				right: 0;
-			}
-		}
-		@include phone {
-			width: 100%;
-			right: -100%;
-		}
 	}
 	&__hidden {
 		display: none;
@@ -221,6 +209,9 @@
 		z-index:auto;
 		margin-top: -14px;
 		margin-left: auto;
+		@include adaptive (610) {
+			margin-right: 16px;
+		}
 		&::before,
 		&::after {
 			content: '';
@@ -242,6 +233,9 @@
 			z-index: -1;
 
 			pointer-events: none;
+			@include phone {
+				display: none;
+			}
 
 		}
 		&::before {
@@ -273,12 +267,16 @@
 			margin-bottom: -60px;
 			margin-right: -16px;
 			margin-left: 45px;
+			@include adaptive (610) {
+				margin-right: 0px;
+				margin-left: 1px;
+			}
 		}
 	}
   &__mobile {
     display: none;
     @include adaptive (610) {
-      width: 47px;
+ 	width: 35px;
       height: 30px;
       display: block;
       border: none;
