--- a/fineroof/app/template/css/style.css
+++ b/fineroof/app/template/css/style.css
@@ -1584,6 +1584,10 @@ a {
     flex-direction: column;
     align-items: center;
   }
+  .index-slider__item picture,
+  .index-slider__item img {
+    width: 100%;
+  }
 }
 
 .catalog .container {
@@ -1880,6 +1884,7 @@ a {
 
 @media screen and (max-width: 479px) {
   .content-block {
+    overflow: hidden;
     padding-top: 20px;
   }
 }
