--- a/fineroof/app/template/sass/layout/_index-slider.scss
+++ b/fineroof/app/template/sass/layout/_index-slider.scss
@@ -13,6 +13,10 @@
 				display: flex;
 				flex-direction: column;
 				align-items: center;
+				& picture,
+				& img {
+					width: 100%;
+				}
 			}
 		}
 }
