--- a/fineroof/app/template/sass/layout/_index-slider.scss
+++ b/fineroof/app/template/sass/layout/_index-slider.scss
@@ -7,6 +7,10 @@
 			}
 		}
 		&__item {
+			display: -webkit-flex;
+			display: -ms-flex;
+			display: flex;
+			justify-content: center;
 			@include phone {
 				display: -webkit-flex;
 				display: -ms-flex;
