--- a/fineroof/app/template/sass/main.scss
+++ b/fineroof/app/template/sass/main.scss
@@ -25,6 +25,7 @@
 @import "layout/galery-block";
 @import "layout/contacts";
 @import "layout/popup";
+@import "layout/fixed-menu";
 
 @import "sections/content";
 @import "sections/navigation";
