--- a/fineroof/app/template/sass/components/_input.scss
+++ b/fineroof/app/template/sass/components/_input.scss
@@ -95,6 +95,18 @@
 		flex-grow: 1;
 
 		margin:3.5px;
+        & span {
+            color: rgb(27, 192, 155);
+            font-size: 15px;
+            font-weight: 700;
+            letter-spacing: 0.38px;
+            position: absolute;
+            left: 25px;
+            top: 17px;
+            transition: .3s;
+            pointer-events: none;
+            user-select: none;
+        }
 	}
 	&-input {
 		width: 100%;
@@ -110,6 +122,11 @@
 		background-color: #ffffff;
 
 		padding: 13px 23px;
+        &:focus ~ span {
+            font-size: 12px;
+            top: calc(100% + 5px);
+            left: 0;
+        }
 		@include placeholder {
 			color: #1bc09b;
 			font-size: inherit;
