--- a/fineroof/app/template/sass/layout/_header.scss
+++ b/fineroof/app/template/sass/layout/_header.scss
@@ -101,6 +101,8 @@
 		& object {
 			width: 219px;
 			height: 99px;
+
+			pointer-events: none;
 			@include phone {
 				width: 156px;
 				height: 71px;
