--- a/fineroof/app/template/sass/sections/_breadcrumbs.scss
+++ b/fineroof/app/template/sass/sections/_breadcrumbs.scss
@@ -2,6 +2,16 @@
   overflow: hidden;
 	margin-bottom: 30px;
 	$parent: &;
+	&__img {
+		display: flex;
+		align-items: center;
+		justify-content: center;
+		margin-right: 16px;
+		& img {
+			display: block;
+			object-fit: contain;
+		}
+	}
 	&__list {
 		display: -ms-flex;
 		display: flex;
