--- a/fineroof/app/template/sass/layout/_actions.scss
+++ b/fineroof/app/template/sass/layout/_actions.scss
@@ -27,9 +27,15 @@
 		cursor: pointer;
 		&.jsChannel {
 			& object,
-			& #{$parent}__text,
-			& a {
+			& #{$parent}__text {
 				pointer-events: none;
+			}
+			& a {
+				width: 100%;
+				height: 100%;
+				position: absolute;
+				top: 0;
+				left: 0;
 			}
 		}
 		&:last-child {
